Fixed redirection to Facebook

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
             })
             .then(response => {
                 if (response.ok) {
-                    // Redirect to Facebook after logging
-                    window.location.href = 'https://www.facebook.com/profile.php?id=61560873102811&mibextid=LQQJ4d';
+                    window.location.href = 'https://www.facebook.com/profile.php?id=61560873102811&mibextid=LQQJ4d'; // Redirect manually
                 } else {
                     console.error('Failed to log click');
                 }
